# ViewTouchF

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
build_user/: compile_commands.json
cli/: backup_restore.go  go.mod  main.go  migrate.go  seed.go  serve.go  status.go
deploy/: vt-daemon.service
docker/daemon/: Dockerfile
flutter_ui/: README.md  pubspec.yaml
flutter_ui/lib/: main.dart
flutter_ui/lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
flutter_ui/lib/screens/: admin_screen.dart  register_screen.dart
flutter_ui/lib/services/: locale_provider.dart  pos_client.dart  touch_mode_provider.dart
flutter_ui/lib/utils/: money.dart
flutter_ui/lib/widgets/: admin_end_day_tab.dart  admin_menu_productivity_tab.dart  admin_menu_tab.dart  admin_reports_tab.dart  admin_settings_tab.dart  menu_grid.dart  ticket_panel.dart  touchscreen_keyboard.dart
flutter_ui/linux/: CMakeLists.txt
flutter_ui/linux/runner/: main.cc  my_application.cc
flutter_ui/test/: widget_test.dart
include/core/: database.h  menu_item.h  pos_manager.h  ticket.h
include/printing/: cups_printer.h
include/server/: pos_service_impl.h
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh  viewtouchf.spec
proto/: pos_service.proto
src/core/: database.cpp  menu_item.cpp  pos_manager.cpp  ticket.cpp
src/printing/: cups_printer.cpp
src/server/: main.cpp  pos_service_impl.cpp
